# simewans-3d-adventure

./: .clang-format  .clangd  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  validate-ctor-ooo.py
cmake/: Sanitizers.cmake
nix/: config.nix  pkgs.nix  scripts.nix
nix/pkgs/: default.nix
src/: Application.cpp  Application.h  Audio.cpp  Audio.h  Config.cpp  Config.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Subsystem.cpp  Subsystem.h  Window.cpp  Window.h  common.h  graphics.cpp  graphics.h  input.cpp  input.h  macros.h  main.cpp  window.cpp  window.h
src/Application/: Config.cpp  Config.h  ConfigDefinitions.h  Error.h  Metadata.h
src/Graphics/: GPUBuffer.h  GPUShader.h  GPUTexture.h
tests/: CMakeLists.txt  unit-category1.cpp
tests/integration-1/: main.cpp
